Fix hidden name on zoom in
Add media query top margin to prevent name from going off screen on zoom (desktop)

--- a/styles/tooplate-style.css
+++ b/styles/tooplate-style.css
@@ -400,9 +400,15 @@ footer p {
     padding-top: 1em;
     font-size: 1.5em;
   }
+
   .title {
     margin-left: 15%;
     margin-right: 5%;
+  }
+
+  #title-div {
+    margin-bottom: 20em;
+    margin-top: 10em;
   }
 }
 
